editing site nav styles

--- a/futuregreen/templates/research/research_index.html
+++ b/futuregreen/templates/research/research_index.html
@@ -3,7 +3,7 @@
 <section class="two-thirds">
     <article class="box">
         {% load generic_flatblocks %}
-        {%  gblock "research_title" for "content.ContentBlock" with "content/contentblock/main.html" %}
+        {%  gblock "research_title" for "content.ContentBlock" %}
     </article>
 </section>
 {%  endblock main %}
