editing site nav styles

--- a/futuregreen/templates/studio/studio_index.html
+++ b/futuregreen/templates/studio/studio_index.html
@@ -1,7 +1,7 @@
 {% extends "studio/studio_base.html" %}
 {% load generic_flatblocks %}
 {% block content %}
-<section class="two-thirds">
+<section class="main two-thirds">
     <article class="box">
         {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/main.html" %}
     </article>
