--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1033,17 +1033,26 @@ ul#project-nav {
   }
 
   #studio .content .main p {
-    -webkit-column-count:3;
-    -moz-column-count:3;
-    -o-column-count:3;
-    -ms-column-count:3;
-    column-count:3;
+    -webkit-column-count:2;
+    -moz-column-count:2;
+    -o-column-count:2;
+    -ms-column-count:2;
+    column-count:2;
     -webkit-column-gap: 20px;
     -ms-column-gap: 20px;
     -o-column-gap: 20px;
     -moz-column-gap: 20px;
     }
 
+    #studio .content .main .pullquote {
+        -webkit-column-count:1;
+        -moz-column-count:1;
+        -o-column-count:1;
+        -ms-column-count:1;
+        column-count:1;
+    }
+
+}
 @media screen and (max-width: 1024px) {
     section.text article {
         font-size:0.92857em;
