--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1032,7 +1032,7 @@ ul#project-nav {
     margin: 0 7.5%;
   }
 
-  #studio .content .main p {
+  #studio .content .main {
     -webkit-column-count:2;
     -moz-column-count:2;
     -o-column-count:2;
