editing site nav styles

--- a/futuregreen/templates/contact.html
+++ b/futuregreen/templates/contact.html
@@ -1,3 +1,6 @@
 {% extends "base.html" %}
 {% load generic_flatblocks %}
 {% block body_id %}contact{% endblock body_id %}
+{% block content %}
+    <h1>Contact</h1>
+{% endblock content %}
