--- a/futuregreen/templates/base.html
+++ b/futuregreen/templates/base.html
@@ -61,7 +61,7 @@
                 <li><a class="studio" href="{% url studio %}">Studio</a></li>
                 <li><a class="portfolio" href="{% url portfolio_project_list %}">Portfolio</a></li>
                 <li><a class="research" href="{% url research %}">Research</a></li>
-                <li><a class="contact" href="#">Contact</a></li>
+                <li><a class="contact" href="{% url contact %}">Contact</a></li>
             </ul>
         </nav>
     </header>
