editing site nav styles

--- a/futuregreen/templates/contact.html
+++ b/futuregreen/templates/contact.html
@@ -2,5 +2,7 @@
 {% load generic_flatblocks %}
 {% block body_id %}contact{% endblock body_id %}
 {% block content %}
-    <h1>Contact</h1>
+    <section class="full box">
+        <h1>Contact</h1>
+    </section>
 {% endblock content %}
