--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -958,11 +958,11 @@ ul#project-nav {
 
 .max .details .description {
     width:83.33333%;
-    -webkit-column-count:3;
-    -moz-column-count:3;
-    -o-column-count:3;
-    -ms-column-count:3;
-    column-count:3;
+    -webkit-column-count:2;
+    -moz-column-count:2;
+    -o-column-count:2;
+    -ms-column-count:2;
+    column-count:2;
     -webkit-column-gap: 20px;
     -ms-column-gap: 20px;
     -o-column-gap: 20px;
@@ -995,7 +995,9 @@ ul#project-nav {
 }
 
 .max ul#project-nav {
-    position:static;
+    top:0;
+    right:0;
+}
 }
 /******** STUDIO *********/
 #studio h1:first-child {
