--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -957,7 +957,7 @@ ul#project-nav {
 }
 
 .max .details .description {
-    width:83.33333%;
+    width:66.66667%;
     -webkit-column-count:2;
     -moz-column-count:2;
     -o-column-count:2;
@@ -995,6 +995,7 @@ ul#project-nav {
 }
 
 .max ul#project-nav {
+    margin-top:40px;
     top:0;
     right:0;
 }
