--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -958,6 +958,7 @@ ul#project-nav {
 
 .max .details .description {
     width:66.66667%;
+    margin-right:16.66667%;
     -webkit-column-count:2;
     -moz-column-count:2;
     -o-column-count:2;
@@ -970,7 +971,7 @@ ul#project-nav {
     -webkit-column-fill:balanced;
     -moz-column-fill:balanced;
     column-fill:balanced;
-    float:left;
+    float:right;
 }
 
 .max .details .meta {
