--- a/futuregreen/templates/portfolio/project_list.html
+++ b/futuregreen/templates/portfolio/project_list.html
@@ -7,7 +7,7 @@
                     <h2>Project Type</h2>
                     <ul class="categories">
                         {% for type in projecttype_list %}
-                            <li class="square">
+                            <li class="square" style="float:none;">
                                 <a href="{% url portfolio_projects_by_type type.slug %}" title="{{ type.name }}" class="project-type square center">
                                     {{ type.alternate_title }}
                                 </a>
