--- a/futuregreen/templates/portfolio/project_list.html
+++ b/futuregreen/templates/portfolio/project_list.html
@@ -21,6 +21,7 @@
                                 <a href="{% url portfolio_projects_by_landscape type.slug %}" title="{{ type.name }}" class="landscape-type square center">
                                     {{ type.alternate_title }}
                                 </a>
+                                {{ type.name }}
                             </li>
                         {% endfor %}
                     </ul>
