--- a/futuregreen/templates/portfolio/project_list.html
+++ b/futuregreen/templates/portfolio/project_list.html
@@ -17,11 +17,11 @@
                      <h2>Landscape Type</h2>
                      <ul class="categories">
                         {% for type in landscapetype_list %}
-                            <li style="float:none;">
+                            <li style="float:none; width="100%">
                                 <a href="{% url portfolio_projects_by_landscape type.slug %}" title="{{ type.name }}" class="landscape-type square center">
                                     {{ type.alternate_title }}
                                 </a>
-                                {{ type.name }}
+                                <span style="color:#444;">{{ type.name }}</span>
                             </li>
                         {% endfor %}
                     </ul>
