editing site nav styles

--- a/futuregreen/templates/portfolio/project_list.html
+++ b/futuregreen/templates/portfolio/project_list.html
@@ -24,7 +24,7 @@
                                    style="width:20%;">
                                     {{ type.alternate_title }}
                                 </a>
-                                <span style="color:#444;">{{ type.name }}</span>
+                                <span style="color:#444; font-weight:normal; text-align: left;">{{ type.name }}</span>
                             </li>
                         {% endfor %}
                     </ul>
