--- a/futuregreen/templates/portfolio/project_list.html
+++ b/futuregreen/templates/portfolio/project_list.html
@@ -17,14 +17,14 @@
                      <h2>Landscape Type</h2>
                      <ul class="categories">
                         {% for type in landscapetype_list %}
-                            <li style="float:none; width:100%">
+                            <li style="float:none; width:100%; text-align: left;">
                                 <a href="{% url portfolio_projects_by_landscape type.slug %}"
                                    title="{{ type.name }}"
                                    class="landscape-type square center"
                                    style="width:20%;">
                                     {{ type.alternate_title }}
                                 </a>
-                                <span style="color:#444; font-weight:normal; text-align: left;">{{ type.name }}</span>
+                                <span style="color:#444; font-weight:normal;">{{ type.name }}</span>
                             </li>
                         {% endfor %}
                     </ul>
