--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -119,7 +119,7 @@ body > header > h1 a {
     height:0;
     font-size:8px;
     display:block;
-    background: url('images/logo.png') no-repeat;
+    background: url('images/logo_square.png') no-repeat;
 }
 
 body > header > nav {
