--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1019,6 +1019,8 @@ ul#project-nav {
     padding-top:20px;
 }
 
+
+/******** MEDIA QUERIES **********/
 @media screen and (max-width: 1024px) {
     section.text article {
         font-size:0.92857em;
@@ -1047,6 +1049,25 @@ ul#project-nav {
     }
 }
 
+@media screen and (min-width: 1240px) {
+  #studio .content .main article section.body {
+    -webkit-column-count:2;
+    -moz-column-count:2;
+    -o-column-count:2;
+    -ms-column-count:2;
+    column-count:2;
+    -webkit-column-gap: 20px;
+    -ms-column-gap: 20px;
+    -o-column-gap: 20px;
+    -moz-column-gap: 20px;
+    }
+
+     section.text article {
+        font-size:1em;
+    }
+
+}
+
 
 @media screen and (min-width: 1240px) and (max-width: 1440px) {
   body {
@@ -1070,7 +1091,7 @@ ul#project-nav {
 
 @media screen and (min-width: 1440px) {
      body {
-        width:70%;
-        margin: 0 15%;
+        width:75%;
+        margin: 0 12.5%;
     }
 }
