added new logo square image

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -511,6 +511,9 @@ h1.overlay {
 }
 
 /*********** PROJECT LIST ************/
+#portfolio aside > nav {
+    font-size:.85em;
+}
 .project-list article.project {
     
 }
