added new logo square image

--- a/futuregreen/templates/portfolio/project_list.html
+++ b/futuregreen/templates/portfolio/project_list.html
@@ -4,17 +4,21 @@
         <aside class="sixth">
             {% block filter_nav %}
                 <nav>
-                    <h2>Project Type</h2>
+                    <h2 class="box">Project Type</h2>
                     <ul class="categories">
                         {% for type in projecttype_list %}
-                            <li class="square" style="float:none;">
-                                <a href="{% url portfolio_projects_by_type type.slug %}" title="{{ type.name }}" class="project-type square center">
-                                    {{ type.alternate_title }}
+                            <li style="float:none; width:100%; text-align: left;">
+                                <a href="{% url portfolio_projects_by_type type.slug %}"
+                                   title="{{ type.name }}"
+                                   class="project-type square center"
+                                   style="width:20%;">
+                                   {{ type.alternate_title }}
                                 </a>
+                                <span style="color:#444; font-weight:normal;">{{ type.name }}</span>
                             </li>
                         {% endfor %}
                     </ul>
-                     <h2>Landscape Type</h2>
+                     <h2 class="box">Landscape Type</h2>
                      <ul class="categories">
                         {% for type in landscapetype_list %}
                             <li style="float:none; width:100%; text-align: left;">
