refactoring local apps

--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -73,10 +73,10 @@
        {% endfor %}
         <article class="text box full" id="news">
            <div>
-           <p class="date">{{ item.date_published|date:"M d, Y" }}</p>
-           <h2>{{ item.title }}</h2>
-           {{ item.excerpt_html|safe|truncatewords_html:20 }}
-           <p><a href="{{ item.get_absolute_url }}" class="tease">Read More</a></p>
+           <p class="date">{{ news.date_published|date:"M d, Y" }}</p>
+           <h2>{{ news.title }}</h2>
+           {{ news.excerpt_html|safe|truncatewords_html:20 }}
+           <p><a href="{{ news.get_absolute_url }}" class="tease">Read More</a></p>
            </div>
         </article>
     </div>
