--- a/futuregreen/templates/research/research_base.html
+++ b/futuregreen/templates/research/research_base.html
@@ -1,3 +1,3 @@
 {% extends "base.html" %}
 {% block section_title %}: Research{% endblock section_title %}
-{% block body_id %}studio{% endblock body_id %}
+{% block body_id %}research{% endblock body_id %}
