refactoring local apps

--- a/futuregreen/templates/research/article_archive.html
+++ b/futuregreen/templates/research/article_archive.html
@@ -1,1 +1,16 @@
 {% extends "research/research_base.html" %}
+{% block content %}
+<section class="main two-thirds">
+    <article class="box">
+        {%  gblock "research_title" for "content.ContentBlock" with "content/contentblock/main.html" %}
+    </article>
+</section>
+<section class="third">
+    {% load category_tags %}
+    {% get_latest_objects_by_category research portfolio project date_published 5 as project_list %}
+    {%  for project in project_list %}
+        {{ project.name }}
+    {%  endfor %}
+</section>
+
+{% endblock content %}
