--- a/futuregreen/templates/research/article_archive.html
+++ b/futuregreen/templates/research/article_archive.html
@@ -2,6 +2,7 @@
 {% block content %}
 <section class="main two-thirds">
     <article class="box">
+        {% load generic_flatblocks %}
         {%  gblock "research_title" for "content.ContentBlock" with "content/contentblock/main.html" %}
     </article>
 </section>
