refactoring local apps

--- a/futuregreen/templates/research/article_archive.html
+++ b/futuregreen/templates/research/article_archive.html
@@ -1,5 +1,5 @@
 {% extends "research/research_base.html" %}
-{% block content %}
+{% block main %}
 <section class="main two-thirds">
     <article class="box">
         {% load generic_flatblocks %}
@@ -14,8 +14,5 @@
     </article>
     {% endfor %}
 </section>
-<section class="third">
-   
-</section>
 
-{% endblock content %}
+{% endblock main%}
