refactoring local apps

--- a/futuregreen/templates/portfolio/projects_by_category.html
+++ b/futuregreen/templates/portfolio/projects_by_category.html
@@ -1,6 +1,6 @@
 {% extends 'portfolio/project_list.html' %}
 {% block content_header %}
-    <header class="square box sixth">
+    <header class="square box fifth">
     {% load category_tags %}
         {% block content_title %}
             <div class="box square" style="background:#8ec42a; width:100%; height:100%;">
