refactoring local apps

--- a/futuregreen/templates/portfolio/project_list.html
+++ b/futuregreen/templates/portfolio/project_list.html
@@ -22,7 +22,7 @@
                             <li>
                                 <a href="{% url portfolio_projects_by_type type.slug %}"
                                    title="{{ type.name }}"
-                                   class="project-type square center">
+                                   class="landscape-type square center">
                                    {{ type.alternate_title }}
                                 </a>
                             </li>
