refactoring local apps

--- a/futuregreen/templates/portfolio/project_list.html
+++ b/futuregreen/templates/portfolio/project_list.html
@@ -4,7 +4,7 @@
         <aside class="sixth">
             {% block filter_nav %}
                 <nav>
-                    <h2 class="box">Project Type</h2>
+                    <h2 class="box">Filter Projects</h2>
                     <ul class="categories">
                         {% for type in projecttype_list %}
                             <li>
@@ -16,7 +16,6 @@
                             </li>
                         {% endfor %}
                     </ul>
-                     <h2 class="box">Landscape Type</h2>
                      <ul class="categories">
                         {% for type in landscapetype_list %}
                             <li>
