refactoring local apps

--- a/futuregreen/templates/portfolio/project_list.html
+++ b/futuregreen/templates/portfolio/project_list.html
@@ -31,7 +31,7 @@
             {% endblock filter_nav %}
         </aside>
     {% block main %}
-        <section class="sixth">
+        <section class="five-sixths">
             {% block content_header %}
                 <header class="full">
                     {% block content_title %}
@@ -39,8 +39,6 @@
                     {% endblock content_title %}
                 </header>
             {% endblock content_header %}
-        </section>
-        <section class="two-thirds">
             {% block projects %}
             <section class="project-list">
             {% for project in project_list %}
