--- a/futuregreen/templates/portfolio/project_list.html
+++ b/futuregreen/templates/portfolio/project_list.html
@@ -32,7 +32,7 @@
     {% block main %}
         <section class="five-sixths">
             {% block content_header %}
-                <header class="full">
+                <header class="fifth">
                     {% block content_title %}
                     <h1 class="box full">All Projects</h1>
                     {% endblock content_title %}
