refactoring local apps

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -489,6 +489,10 @@ h1.overlay {
     box-sizing: border-box;
 }
 
+.categories li.active {
+    width:50%;
+}
+
 .categories li a {
         color:#fff;
         float:left;
