--- a/futuregreen/templates/portfolio/project_list.html
+++ b/futuregreen/templates/portfolio/project_list.html
@@ -9,13 +9,17 @@
                             <li>
                                 <a href="{% url portfolio_projects_by_type type.slug %}"
                                    title="{{ type.name }}"
-                                   class="project-type square center">
+                                   class="
+                                   {% if type.slug == slug %}
+                                   active
+                                   {% endif %}
+                                   project-type square center">
                                    {{ type.alternate_title }}
                                 </a>
                             </li>
                         {% endfor %}
                         {% for type in landscapetype_list %}
-                            <li>
+                            <li {% if type.slug == slug %}class="active"{% endif %}>
                                 <a href="{% url portfolio_projects_by_type type.slug %}"
                                    title="{{ type.name }}"
                                    class="landscape-type square center">
