--- a/futuregreen/templates/portfolio/projects_by_category.html
+++ b/futuregreen/templates/portfolio/projects_by_category.html
@@ -1,5 +1,5 @@
 {% extends 'portfolio/project_list.html' %}
         {% block content_title %}
                 <h1>{{ category.alternate_title }}</h1>
-                <p>{{ category.name }}{{ path }}</p>
+                <p>{{ category.name }}</p>
         {% endblock content_title %}
