--- a/futuregreen/templates/portfolio/projects_by_category.html
+++ b/futuregreen/templates/portfolio/projects_by_category.html
@@ -1,5 +1,4 @@
 {% extends 'portfolio/project_list.html' %}
         {% block content_title %}
-                <h1>{{ category.alternate_title }}</h1>
-                <p>{{ category.name }}</p>
+            <h1 class="box full">{{ category.name }} Projects</h1>
         {% endblock content_title %}
