--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -491,7 +491,10 @@ h1.overlay {
 
 .categories li.active {
     width:50%;
-    font-size:2em;
+}
+
+.categories li.active a {
+    font-size:2.28570em;
 }
 
 .categories li a {
