--- a/futuregreen/templates/portfolio/project_list.html
+++ b/futuregreen/templates/portfolio/project_list.html
@@ -28,14 +28,16 @@
             {% endblock filter_nav %}
         </aside>
     {% block main %}
-        <section class="five-sixths">
+        <section class="sixth">
             {% block content_header %}
-                <header class="fifth">
+                <header>
                     {% block content_title %}
                     <h1 class="box full">All Projects</h1>
                     {% endblock content_title %}
                 </header>
             {% endblock content_header %}
+        </section>
+        <section class="two-thirds">
             {% block projects %}
             <section class="project-list">
             {% for project in project_list %}
